# humanoidna

./: .gitignore  README.md
Vision_systems/: CMakeLists.txt
Vision_systems/data/: realsense_humanoidna.json
Vision_systems/src/: realsense_humanoidna.cpp
camera_calibration/: T_cam_from_tcp.npy  T_tcp_from_cam.npy  camera_matrix.npy
camera_calibration/.agent/: NEXT_STEPS.md  PRIMER.md  TASK2_GUIDE.md
camera_calibration/.agent/logs/: changes.md  decisions.md  prompts.md
camera_calibration/configs/: camera.md  robot.md
camera_calibration/data/calibration_images/: robot_positions.txt
camera_calibration/data/results/: koordinate.txt
camera_calibration/src/: 01_intrinzicni.py  02_skupljanje_podataka.py  03_eks_koord_sustavi.py  04_hand_eye.py  05_object_localization_in_robot_base.py.py
camera_calibration/tasks/: zadatak_1.md  zadatak_2.md  zadatak_3.md  zadatak_4.md  zadatak_5.md  zadatak_6.md
object_detection_and_pose_estimation/: CMakeLists.txt  README.md
object_detection_and_pose_estimation/src/: main.cpp
